2001-08-09  Derek Price  <dprice@collab.net>

	* buffer.c (stdio_buffer_shutdown): Assume the buffer is not a socket
	when NO_SOCKET_TO_FD is defined.
	* client.c (make_bufs_from_fds): Add is_sock argument and remove fstat
	call and reference to S_ISSOCK since these functions aren't available
	under Windows.
	(connect_to_forked_server, connect_to_pserver, start_tcp_server,
	start_server, start_rsh_server): Use new argument.
	(Patch from "Manfred Klug" <manklu@web.de>.)

	* buffer.c (stdio_buffer_shutdown): Various reformattings, fix bug
	where rsh pipes weren't being closed.

2001-08-09  Derek Price  <dprice@collab.net>

	* sanity.sh (rmadd, rm-update-message, join-two-branch,
	ignore-on-branch): Change a few references to `cvs' to `$PROG'.

2001-08-07  Derek Price  <dprice@collab.net>

	* build_src.com: Add annotate.c/annotate.obj,verify, correct zlib name.
	* patch.c: VMS time_t appears to be unsigned.   Add a cast when testing
	for (time_t)-1.
	* subr.c: #else,#endif for no symlinks should be moved.
	(Patch from Mike Marciniszyn <Mike.Marciniszyn@sanchez.com>.)

2001-08-06  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated.

2001-08-01  Derek Price  <dprice@collab.net>

	* diff.c (diff): Send long option for side-by-side diffs to the server
	rather than '-y', for backwards compatibility with old servers.
	(Original patch from Peter Mathiasson <peter@mathiasson.nu>.)

2001-07-19  Larry Jones  <larry.jones@sdrc.com>

	* mkmodules.c (cvswrappers_contents): Remove -t/-f since they're
	disabled in wrapper.c.

	* checkout.c (checkout): Don't complain about checking out into the
	repository when piping output.
	(Reported by der Mouse <mouse@Rodents.Montreal.QC.CA>.)
	* sanity.sh (checkout_repository): New tests for above.

2001-07-10  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (importc-7): Now works correctly in local mode.

	* commit.c (commit_dirleaveproc): We're still in the directory when